--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./Projets personnel.html">Projets personnel</a>
         <a href="./contact.html">Contact</a>
         <div class="avatar">
-            <img src="https://geds3169.github.io/images/avatar.png" alt="Mon Identité">
+            <img src="./images/avatar.png" alt="Mon Identité">
         </div>
     </div>
     
