--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/my_css.css">
     <title>Guilhem SCHLOSSER</title>
 </head>
