--- a/Formations.html
+++ b/Formations.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/my_css.css">
     <title>Guilhem SCHLOSSER</title>
 </head>
@@ -18,7 +19,7 @@
         <a href="./Projets personnel.html">Projets personnel</a>
         <a href="./contact.html">Contact</a>
         <div class="avatar">
-            <img src="https://geds3169.github.io/images/avatar.png" alt="Mon Identité">
+            <img src="./images/avatar.png" alt="Mon Identité">
         </div>
     </div>
 
