--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/my_css.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href=".image/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href=".image/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href=".image/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <title>Guilhem SCHLOSSER</title>
     </head>
