--- a/Projets personnel.html
+++ b/Projets personnel.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/my_css.css">
-    <title>Guilhem SCHLOSSER</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./css/my_css.css">
+        <link rel="apple-touch-icon" sizes="180x180" href=".image/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href=".image/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href=".image/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <title>Guilhem SCHLOSSER</title>
+    </head>
     <body>
         <!-- Nom -->
         <h1 style="text-align:center">Guilhem SCHLOSSER<span class="print-button" onclick="window.print()">&#128438;</span></h1>
