--- a/Formations.html
+++ b/Formations.html
@@ -1,93 +1,97 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/my_css.css">
-    <title>Guilhem SCHLOSSER</title>
-</head>
-<body>
-    <!-- Nom -->
-    <h1 style="text-align:center">Guilhem SCHLOSSER<span class="print-button" onclick="window.print()">&#128438;</span></h1>
-        <h2 style="text-align:center">Administrateur Systèmes et réseaux, DevOps - Profil Junior</h2>
-
-    <!-- Menu -->
-    <div class="topnav">
-        <a href="./index.html">Présentation</a>
-        <a href="Skills.html">Skills</a>
-        <a href="./experiences.html">Expériences</a>
-        <a class="active" href="./Formations.html">Formations</a>
-        <a href="./Certifications.html">Certifications</a>
-        <a href="./Projets personnel.html">Projets personnel</a>
-        <a href="./contact.html">Contact</a>
-        <div class="avatar">
-            <img src="./image/avatar.png" alt="Mon Identité">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./css/my_css.css">
+        <link rel="apple-touch-icon" sizes="180x180" href=".image/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href=".image/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href=".image/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <title>Guilhem SCHLOSSER</title>
+    </head>
+    <body>
+        <!-- Nom -->
+        <h1 style="text-align:center">Guilhem SCHLOSSER<span class="print-button" onclick="window.print()">&#128438;</span></h1>
+            <h2 style="text-align:center">Administrateur Systèmes et réseaux, DevOps - Profil Junior</h2>
+    
+        <!-- Menu -->
+        <div class="topnav">
+            <a href="./index.html">Présentation</a>
+            <a href="Skills.html">Skills</a>
+            <a href="./experiences.html">Expériences</a>
+            <a class="active" href="./Formations.html">Formations</a>
+            <a href="./Certifications.html">Certifications</a>
+            <a href="./Projets personnel.html">Projets personnel</a>
+            <a href="./contact.html">Contact</a>
+            <div class="avatar">
+                <img src="./image/avatar.png" alt="Mon Identité">
+            </div>
         </div>
-    </div>
-
-    <!-- Education -->
-    <div class="formation-layout">
-        <div class="formation-container">
-            <p>
-                <span class="formation-title ">Formation Filière DevOps</span>&emsp;<span class="formation-school">POEI SPIE ICS - 31400 Toulouse / AJC FORMATION - 75009 Paris</span>
-            </p>
-            <p class="formation-date">De juillet 2022 à Octobre 2022</p>
-            <!-- ... ajouter des puces avec des éléments en italiques ... -->
-            <ul>
-                <li><em>Administration système Linux.</em></li>
-                <li><em>Intégration continue et livraison continue (CI/CD).</em></li>
-                <li><em>Nginx.</em></li>
-                <li><em>Amazon Web Services.</em></li>
-                <li><em>Bash, Python.</em></li>
-            </ul>
-            <br>
-            <hr>
-            <p>
-                <span class="formation-title ">Formation HSTA Bulats</span>&emsp;<span class="formation-school">ENGLISH ENTERPRISES - 31770 Colomiers</span>
-            </p>
-            <p class="formation-date">De mai 2022 à juin 2022</p>
-            <!-- ... ajouter des puces avec des éléments en italiques ... -->
-            <ul>
-                <li><em>Améliorer et enrichir ses compétences de communication en anglais.</em></li>
-                <li><em>Écoute et écrit, prise de parole.</em></li>
-                <li><em>Exprimer son cursus et son projet professionnel.</em></li>
-            </ul>
-            <p class="formation-complement"></p>
-            <hr>
-            <br>
-            <p>
-                <span class="formation-title ">Master 1 Expert Résaux Infrastructure Sécurité</span>&emsp;<span class="formation-school">ORT - 31770 Colomiers</span>
-            </p>
-            <p class="formation-date">De septembre 2020 à juillet 2021</p>
-            <!-- ... ajouter des puces avec des éléments en italiques ... -->
-            <ul>
-                <li><em>Conception et/ou la maintenance des réseaux et des équipements, mise en production et déploiement. Management des ressources, planification.</em></li>
-                <li><em>Gestion de projets</em></li>
-                <li><em>Méthodes Agiles</em></li>
-                <li><em>Qualité du livrable – CMMI</em></li>
-                <li><em>Management des SI et développement durable.</em></li>
-                <li><em>Routage et Commutation.</em></li>
-                <li><em>Virtualisation et Cloud.</em></li>
-                <li><em>Voix sur IP.</em></li>
-                <li><em>Gestion du support.</em></li>
-            </ul>
-            <p class="formation-complement">Formation interrompu (problèmatiques: signé Master 1/2 - Diplôme final Titre RNPC), soutenance 1ere année éffectuée/réussie</p>
-            <br>
-            <hr>
-            <p>
-                <span class="formation-title ">Titre RNCP de niveau 5 Technicien Supérieur Systèmes et Réseaux (BTS)</span>&emsp;<span class="formation-school">CRIC ASSOCIATION - 31076 Toulouse</span>
-            </p>
-            <p class="formation-date">2019 - 2020</p>
-            <!-- ... ajouter des puces avec des éléments en italiques ... -->
-            <ul>
-                <li><em>Mise en service d’un équipement numérique à l’intervention dans un environnement de cloud computing en passant par la sécurisation des accès à internet.</em></li>
-                <li><em>Gérer les incidents utilisateurs en appliquant les bonnes pratiques.</em></li>
-                <li><em>Installer et configurer les serveurs internes et externes de l’entrepris</em></li>
-                <li><em>Assurer l’administration des serveurs.</em></li>
-                <li><em>Mettre en place et sécuriser une infrastructure réseau.</em></li>
-            </ul>
-            <p class="formation-complement">Formation emputée d'un stage au sein de <a href="https://oneweb.net/">OneWeb</a> résultant des mesures de confinement période du Covid</p>
-            <br>
-            <hr>
-        </div>
-    </div>   
-</body>
+    
+        <!-- Education -->
+        <div class="formation-layout">
+            <div class="formation-container">
+                <p>
+                    <span class="formation-title ">Formation Filière DevOps</span>&emsp;<span class="formation-school">POEI SPIE ICS - 31400 Toulouse / AJC FORMATION - 75009 Paris</span>
+                </p>
+                <p class="formation-date">De juillet 2022 à Octobre 2022</p>
+                <!-- ... ajouter des puces avec des éléments en italiques ... -->
+                <ul>
+                    <li><em>Administration système Linux.</em></li>
+                    <li><em>Intégration continue et livraison continue (CI/CD).</em></li>
+                    <li><em>Nginx.</em></li>
+                    <li><em>Amazon Web Services.</em></li>
+                    <li><em>Bash, Python.</em></li>
+                </ul>
+                <br>
+                <hr>
+                <p>
+                    <span class="formation-title ">Formation HSTA Bulats</span>&emsp;<span class="formation-school">ENGLISH ENTERPRISES - 31770 Colomiers</span>
+                </p>
+                <p class="formation-date">De mai 2022 à juin 2022</p>
+                <!-- ... ajouter des puces avec des éléments en italiques ... -->
+                <ul>
+                    <li><em>Améliorer et enrichir ses compétences de communication en anglais.</em></li>
+                    <li><em>Écoute et écrit, prise de parole.</em></li>
+                    <li><em>Exprimer son cursus et son projet professionnel.</em></li>
+                </ul>
+                <p class="formation-complement"></p>
+                <hr>
+                <br>
+                <p>
+                    <span class="formation-title ">Master 1 Expert Résaux Infrastructure Sécurité</span>&emsp;<span class="formation-school">ORT - 31770 Colomiers</span>
+                </p>
+                <p class="formation-date">De septembre 2020 à juillet 2021</p>
+                <!-- ... ajouter des puces avec des éléments en italiques ... -->
+                <ul>
+                    <li><em>Conception et/ou la maintenance des réseaux et des équipements, mise en production et déploiement. Management des ressources, planification.</em></li>
+                    <li><em>Gestion de projets</em></li>
+                    <li><em>Méthodes Agiles</em></li>
+                    <li><em>Qualité du livrable – CMMI</em></li>
+                    <li><em>Management des SI et développement durable.</em></li>
+                    <li><em>Routage et Commutation.</em></li>
+                    <li><em>Virtualisation et Cloud.</em></li>
+                    <li><em>Voix sur IP.</em></li>
+                    <li><em>Gestion du support.</em></li>
+                </ul>
+                <p class="formation-complement">Formation interrompu (problèmatiques: signé Master 1/2 - Diplôme final Titre RNPC), soutenance 1ere année éffectuée/réussie</p>
+                <br>
+                <hr>
+                <p>
+                    <span class="formation-title ">Titre RNCP de niveau 5 Technicien Supérieur Systèmes et Réseaux (BTS)</span>&emsp;<span class="formation-school">CRIC ASSOCIATION - 31076 Toulouse</span>
+                </p>
+                <p class="formation-date">2019 - 2020</p>
+                <!-- ... ajouter des puces avec des éléments en italiques ... -->
+                <ul>
+                    <li><em>Mise en service d’un équipement numérique à l’intervention dans un environnement de cloud computing en passant par la sécurisation des accès à internet.</em></li>
+                    <li><em>Gérer les incidents utilisateurs en appliquant les bonnes pratiques.</em></li>
+                    <li><em>Installer et configurer les serveurs internes et externes de l’entrepris</em></li>
+                    <li><em>Assurer l’administration des serveurs.</em></li>
+                    <li><em>Mettre en place et sécuriser une infrastructure réseau.</em></li>
+                </ul>
+                <p class="formation-complement">Formation emputée d'un stage au sein de <a href="https://oneweb.net/">OneWeb</a> résultant des mesures de confinement période du Covid</p>
+                <br>
+                <hr>
+            </div>
+        </div>   
+    </body>
 </html>
