--- a/Projets personnel.html
+++ b/Projets personnel.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!-- Nom -->
-        <h1 style="text-align:center">Guilhem SCHLOSSER<span class="print-button" onclick="window.print()">&#128438;</span></h1>
+        <h1 style="text-align: center">Guilhem SCHLOSSER<span class="print-button" onclick="window.print()"><img src="image/print.png" style="height: 80px; width: auto;" alt="Imprimer" width="16" height="16"></span></h1>
             <h2 style="text-align:center">Administrateur Systèmes et réseaux, DevOps - Profil Junior</h2>
 
         <!-- Menu -->
