--- a/Skills.html
+++ b/Skills.html
@@ -38,6 +38,9 @@
                 <img src="./image/excel.jpg" alt="Excel logo">
                 <p>Excel</p>
             </div>
+            <div class="column">
+            <!-- Ajouter un skill ici-->
+            </div>
         </div>
         <br>
         <hr>
@@ -85,6 +88,9 @@
             <div class="column">
                 <img src="./image/blender.png" alt="blender logo">
                 <p>Blender</p>
+            </div>
+            <div class="column">
+            <!-- Ajouter un skill ici-->
             </div>
         </div>
         <br>
